docs: GetLecturers documentation
